projet systeme de numeration ajout code js condition à revoir

--- a/projetSystemeNumeration/index.html
+++ b/projetSystemeNumeration/index.html
@@ -17,8 +17,9 @@
           <div class="select1">
             <div class="one">
               <form>
-                <select name="" id="">
-                  <option value="Binaire" default>Binaire</option>
+                <select name="" id="s1">
+                  <option value="Choix" default>Choisir une Base</option>
+                  <option value="Binaire">Binaire</option>
                   <option value="Decimal">Decimal</option>
                   <option value="Hexadecimal">Hexadecimal</option>
                   <option value="Octal">Octal</option>
@@ -27,15 +28,16 @@
             </div>
             <div class="two">
               <form action="">
-                <input type="text" />
+                <input type="text" id="entre" />
               </form>
             </div>
           </div>
           <div class="select2">
             <div class="one">
               <form>
-                <select name="" id="">
-                  <option value="Binaire" default>Binaire</option>
+                <select name="" id="s2">
+                  <option value="choix" default>Choisir une Base</option>
+                  <option value="Binaire">Binaire</option>
                   <option value="Decimal">Decimal</option>
                   <option value="Hexadecimal">Hexadecimal</option>
                   <option value="Octal">Octal</option>
@@ -44,12 +46,13 @@
             </div>
             <div class="two">
               <form action="">
-                <input type="text" disabled />
+                <input type="text" id="sortie" disabled />
               </form>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="./script/script.js"></script>
   </body>
 </html>
