creation d'un objet pour recuperer les valeurs saisit et perspective

--- a/ecole/index.html
+++ b/ecole/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="main">
       <div class="titre">
-        <h1>ISI</h1>
+        <h1>GROUPE ISI</h1>
       </div>
       <div class="forms">
         <form>
@@ -62,9 +62,11 @@
           />
           <h2 class="error" id="msgErrMoy" hidden>Moyenne incorrecte</h2>
         </form>
-        <button id="enregistrer" onclick="checkChamp()">Enregistrer</button>
-        <button id="afficher">Afficher</button>
-        <button id="annuler">Annuler</button>
+        <div class="bouton">
+          <button id="enregistrer" onclick="checkChamp()">Enregistrer</button>
+          <button id="afficher">Afficher</button>
+          <button id="annuler">Annuler</button>
+        </div>
       </div>
     </div>
     <div id="affichage" hidden>
