netflix page accueil 1

--- a/ecole/index.html
+++ b/ecole/index.html
@@ -95,7 +95,8 @@
       <div class="recherche">
         <input type="search" id="recherche" />
         <button id="chercher">
-          <i class="fa-solid fa-magnifying-glass"></i>
+          <!--<i class="fa-solid fa-magnifying-glass"></i>-->
+          chercher
         </button>
       </div>
       <div id="affichage" hidden>
